test: Edit no phone filter tests